force-app/main/default/objects/PDE_c_Home__dlm/fields/TECH_SelectedPDE_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_SelectedPDE_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_SelectedPDE</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>TECH_SelectedPDE</labelOverride>
        <masterLabel>TECH_SelectedPDE</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>