force-app/main/default/objects/PDE_c_Home__dlm/fields/TECH_Short_FTA_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_Short_FTA_c__c</fullName>
    <label>TECH Short FTA</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>TECH Short FTA</labelOverride>
        <masterLabel>TECH Short FTA</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>