force-app/main/default/objects/PDE_c_Home__dlm/fields/TECH_Syndic_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_Syndic_c__c</fullName>
    <label>TECH Syndic</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>TECH Syndic</labelOverride>
        <masterLabel>TECH Syndic</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>