force-app/main/default/objects/PDE_c_Home__dlm/fields/TypePDE_c__c.field-meta.xml
<CustomField>
    <fullName>TypePDE_c__c</fullName>
    <label>Type PDE</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Type PDE</labelOverride>
        <masterLabel>Type PDE</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>