force-app/main/default/objects/PDE_c_Home__dlm/fields/Ville_c__c.field-meta.xml
<CustomField>
    <fullName>Ville_c__c</fullName>
    <label>Ville</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Ville</labelOverride>
        <masterLabel>Ville</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>