force-app/main/default/objects/PDE_c_Home__dlm/fields/X12_mois_consommation_SGE_c__c.field-meta.xml
<CustomField>
    <fullName>X12_mois_consommation_SGE_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>12 mois de consommation sur SGE</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>12 mois de consommation sur SGE</labelOverride>
        <masterLabel>12 mois de consommation sur SGE</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>